--- a/Recipe:index.html
+++ b/Recipe:index.html
@@ -7,16 +7,16 @@
     <meta name="keywords" content="list,of,keywords,separate,by,commas">
      <title>Tangy Tres Leches Cake</title>
 </head>
-<main>
 <body>
-<header1>Tangy Tres Leches Cake</header1>
+<main>
+<header>Tangy Tres Leches Cake</header>
 <p>By: Erin McDowell</p>
 <p1>My favorite version of the most classic tres leches cake subs out buttermilk for the whole milk.
 I love the subtle tange it adds and how it makes the cake itself a little less rich, meaning I can 
 really load up on the whipped cream topping later.A vanilla cake with a tangy whip cream frosting which 
 is lightly sprinkled with cinnamon.</p1>
-<h2>Ingredients</h2>
-<h3>Cake:</h3>
+<h1>Ingredients</h1>
+<h2>Cake:</h2>
 <ul>
 <li>12 tablespoons (170g) unsalted butter</li>
 <li>1 1/2 cups (297g) granulated sugar</li>
@@ -26,7 +26,7 @@ is lightly sprinkled with cinnamon.</p1>
 <li>1 1/2 teaspoons (6g) backing powder</li>
 <li>3/4 teaspoon (3g) fine sea salt</li>
 </ul>
-<h4>Soaking:</h4>
+<h3>Soaking:</h3>
 <ul>
 <li>1 cup buttermilk</li>
 <li>one (14 ounce) can sweetened condensed milk</li>
@@ -34,7 +34,7 @@ is lightly sprinkled with cinnamon.</p1>
 <li>Lightly sweetened whipped cream, as needed for finishing</li>
 <li>Ground cinnamon, as needed for finishing</li>
 </ul>
-<h5>Method</h5>
+<h4>Method</h4>
 <ol>
 <li>Preheat the oven to 350 F. Lightly greas a 9x13 pan with nonstick spray.</li>
 <li>In the bowl of an electric mixer fitted with the paddle attachment, cream the butter 
@@ -52,9 +52,9 @@ is lightly sprinkled with cinnamon.</p1>
 <li>Finish the cake with the whipped cream and a sprinkle of ground cinnamon. Serve immediately,
     or refrigerate for up to 5 hours before serving.</li>
 </ol>
-</body>
 </main>
+</body>
 </html>
 <footer>
-<p>Page Created by Kelly Carney</p>
+Page Created by Kelly Carney
 </footer>
