--- a/Recipe:index.html
+++ b/Recipe:index.html
@@ -10,6 +10,7 @@
 <body>
 <main>
 <header>Tangy Tres Leches Cake</header>
+<img src="cake.jpeg" alt="Tangy Tres Leches Cake"/>
 <p>By: Erin McDowell</p>
 <p1>My favorite version of the most classic tres leches cake subs out buttermilk for the whole milk.
 I love the subtle tange it adds and how it makes the cake itself a little less rich, meaning I can 
