--- a/Recipe:index.html
+++ b/Recipe:index.html
@@ -10,12 +10,12 @@
 <body>
 <main>
 <header>Tangy Tres Leches Cake</header>
-<img src="cake.jpeg" alt="Tangy Tres Leches Cake"/>
 <p>By: Erin McDowell</p>
-<p1>My favorite version of the most classic tres leches cake subs out buttermilk for the whole milk.
+<img src="cake.jpeg" alt="Tangy Tres Leches Cake"/>
+<p>My favorite version of the most classic tres leches cake subs out buttermilk for the whole milk.
 I love the subtle tange it adds and how it makes the cake itself a little less rich, meaning I can 
 really load up on the whipped cream topping later.A vanilla cake with a tangy whip cream frosting which 
-is lightly sprinkled with cinnamon.</p1>
+is lightly sprinkled with cinnamon.</p>
 <h1>Ingredients</h1>
 <h2>Cake:</h2>
 <ul>
@@ -56,6 +56,7 @@ is lightly sprinkled with cinnamon.</p1>
 </main>
 </body>
 </html>
+
 <footer>
 Page Created by Kelly Carney
 </footer>
